# text-to-sql

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  security.yml
data/: metrics.yaml
docs/: ARCHITECTURE.md  DEMO.md
evals/: examples.yaml  golden.yaml  harness.py  report.py
scripts/: build_retrieval_index.py  seed.py
server/: __init__.py  _models.py  _validator.py  warehouse_mcp.py
server/prompts/: query_assistant.md
sql/: schema.sql
tests/: conftest.py  test_agent.py  test_cli.py  test_evals_harness.py  test_evals_report.py  test_graph.py  test_logging.py  test_mcp_tools.py  test_nodes.py  test_validator.py
text_to_sql/: __init__.py  __main__.py  agent.py
voyage/: __init__.py  cli.py  config.py  logging.py
voyage/agent/: __init__.py  client.py  graph.py  llm.py  state.py
voyage/agent/nodes/: clarify.py  classify.py  draft.py  execute.py  failure.py  interpret.py  refuse.py  retrieve.py  validate.py
