[project]
name = "voyage-bi-copilot"
version = "0.1.0"
description = "Production-grade text-to-SQL agent for vacation rental operations"
requires-python = ">=3.12,<4.0"
dependencies = [
    "anthropic>=0.25",
    "asyncpg>=0.29",
    "faker>=24.0",
    "instructor>=1.3",
    "langgraph>=0.1",
    "mcp>=1.0",
    "pgvector>=0.2",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "rich>=13.7",
    "sqlalchemy>=2.0",
    "sqlglot>=23.0",
    "typer>=0.12",
]

[project.scripts]
voyage = "voyage.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voyage"]

[dependency-groups]
dev = [
    "bandit>=1.7",
    "cyclonedx-bom>=4.4",
    "mypy>=1.10",
    "pip-audit>=2.7",
    "pre-commit>=3.7",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "types-pyyaml>=6.0",
]

# -----------------------------------------------------------------------------
# Ruff — format + lint
# -----------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]  # line length enforced by formatter

[tool.ruff.lint.isort]
known-first-party = ["voyage", "server", "evals", "scripts"]

# -----------------------------------------------------------------------------
# Mypy — strict type checking
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
files = ["voyage", "scripts", "server", "evals"]
exclude = ["tests/", "text_to_sql/"]

[[tool.mypy.overrides]]
module = [
    "asyncpg",
    "asyncpg.*",
    "pgvector.*",
    "instructor.*",
    "langchain_core.*",
    "langgraph.*",
    "mcp.*",
    "sqlglot.*",
    "faker.*",
]
ignore_missing_imports = true

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires a live database (deselect with -m 'not integration')",
    "llm: makes real LLM API calls (deselect with -m 'not llm')",
]
